@startuml
' Comando para deixar o diagrama mais bonito
skinparam linetype ortho

' --- ENTIDADES ---

entity "Cliente" as Cliente {
  + id: Long <<PK>>
  --
  nome: String
  telefone: String
}

entity "Veiculo" as Veiculo {
  + id: Long <<PK>>
  --
  placa: String
  modelo: String
  # cliente_id: Long <<FK>>
}

entity "Ticket" as Ticket {
  + id: Long <<PK>>
  --
  horarioEntrada: LocalDateTime
  horarioSaida: LocalDateTime
  valor: Double
  status: TicketStatus
  # veiculo_id: Long <<FK>>
  # vaga_id: Long <<FK>>
}

entity "Vaga" as Vaga {
  + id: Long <<PK>>
  --
  numeroVaga: String
  tipo: TipoVaga
  ativo: boolean
}

entity "Usuario" as Usuario {
  + id: Long <<PK>>
  --
  nome: String
  email: String
  telefone: String
  senha: String
  isAdmin: boolean
  ativo: boolean
}

entity "Configuracao" as Configuracao {
  + id: Long <<PK>>
  --
  minutosTolerancia: int
  valorPorHora: double
}


' --- RELACIONAMENTOS ---
' O PlantUML vai desenhar as linhas e os campos FK automaticamente

Cliente "1" ||--|{ "N" Veiculo : "possui"
Veiculo "1" ||--|{ "N" Ticket : "gera"
Vaga    "1" ||--|{ "N" Ticket : "é associado a"


@enduml